<resources>
    <string name="favorites">Favorites</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="now_playing">Now playing</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="up_coming">Up coming</string>
    <string name="on_the_air">On the air</string>
    <string name="airing_today">Airing today</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_profile">Change Profile</string>
    <string name="about_description">Copyright © 2021 Flicknplay\n\nThis product uses the Flicknplay API.</string>
    <string name="tmdb_terms">Flicknplay terms</string>
    <string name="tmdb_api_terms">Flicknplay API terms</string>
    <string name="failed_open_link">Failed to open the link. Check if you have a browser installed and try again.</string>
    <string name="welcome">Welcome</string>
    <string name="login_failed">Login failed</string>
    <string name="ok">OK</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="login">Login</string>
    <string name="login_l">Log In</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_phone">Email</string>
    <string name="btn_login">Login</string>
    <string name="remember_me">Stay signed in for a month</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="btn_register">Register</string>
    <string name="register">Sign In</string>
    <string name="prompt_password_confirmation">Confirm Password</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="sign_up_title">Create a new account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tv_who_watching">Who\'s Watching?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_choose_avatar">Choose Icon</string>
    <string name="username">Username</string>
    <string name="kid_profile">Kid Profile</string>
    <string name="kid_friendly_interface_with_only_content_suitable_for_kids">Kid friendly interface with only content suitable for kids.</string>
    <string name="new_password">New Password</string>
    <string name="nc_17">NC-17</string>
    <string name="r">R</string>
    <string name="pg_13">PG-13</string>
    <string name="pg">PG</string>
    <string name="g">G</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="content_rating">Content Rating</string>
    <string name="titles_rated_tv_ma_and_below_are_available_to_watch">Titles rated TV-MA and below are available to watch.</string>
    <string name="profile_password">Profile Password</string>
    <string name="hint_profile_password">Enter your Profile Password</string>
    <string name="limit_access_to_your_profile_with_a_password">Limit access to your profile with a password.</string>
    <string name="btn_ok">OK</string>
    <string name="account_settings">Account Settings</string>
    <string name="view_and_update_your_account_details_profile_and_more">View and update your account details, profile and more.</string>
    <string name="update_name_or_profile_image">Update Name or Profile Image</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="current_password">Current Password</string>
    <string name="update_password">Update Password</string>
    <string name="timezone">Timezone</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="manage_social_login">Manage Social Login</string>
    <string name="enable_or_disable_connected_social_services">Enable or disable connected social services</string>
    <string name="google">Google</string>
    <string name="enable">Enable</string>
    <string name="facebook">Facebook</string>
    <string name="disable">Disable</string>
    <string name="delete_account">Delete Account</string>
    <string name="danger_zone">Danger Zone</string>
    <string name="facebook_app_id">802985104017922</string>
    <string name="facebook_client_token">5ab3ccf953e24f565f9b27470ad05459</string>
    <string name="fb_login_protocol_scheme">fb376190913619932</string>
</resources>