<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragment.CreateUserProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp">



        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <ImageView
            android:id="@+id/img_avatar"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/avatar"
            android:padding="5dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/layout_bg"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_avatar">


            <EditText
                android:id="@+id/etUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/username"
                android:imeOptions="actionDone"
                android:inputType="textCapWords"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Switch
                android:id="@+id/kidProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:thumbTint="@color/grey_dark"
                app:layout_constraintTop_toBottomOf="@+id/etUsername"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kid_profile"
                android:textSize="16dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/kidProfile"
                app:layout_constraintTop_toTopOf="@id/kidProfile"
                app:layout_constraintBottom_toBottomOf="@id/kidProfile"/>

            <TextView
                android:id="@+id/forKidDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kid_friendly_interface_with_only_content_suitable_for_kids"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kidProfile"/>

            <TextView
                android:id="@+id/contentRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_rating"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forKidDescription"/>

            <TextView
                android:id="@+id/contentRatingDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titles_rated_tv_ma_and_below_are_available_to_watch"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contentRating"/>

            <RadioGroup
                android:id="@+id/contentRatingRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contentRatingDescription">


                <RadioButton
                    android:id="@+id/radio_g"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/grey_dark"
                    android:text="@string/g"/>

                <RadioButton
                    android:id="@+id/radio_pg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/grey_dark"
                    android:text="@string/pg"/>

                <RadioButton
                    android:id="@+id/radio_pg13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/grey_dark"
                    android:text="@string/pg_13"/>

                <RadioButton
                    android:id="@+id/radio_r"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/grey_dark"
                    android:text="@string/r"/>

                <RadioButton
                    android:id="@+id/radio_nc17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/grey_dark"
                    android:text="@string/nc_17"/>

            </RadioGroup>

            <TextView
                android:id="@+id/profilePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_password"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contentRatingRadioGroup"/>

            <TextView
                android:id="@+id/profilePasswordDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limit_access_to_your_profile_with_a_password"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profilePassword"/>


            <TextView
                android:id="@+id/newPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/etNewPassword"
                app:layout_constraintBottom_toBottomOf="@id/etNewPassword"/>

            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/new_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/etConfirmPassword"
                app:layout_constraintTop_toBottomOf="@id/profilePasswordDescription" />

            <TextView
                android:id="@+id/confirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/etConfirmPassword"
                app:layout_constraintBottom_toBottomOf="@id/etConfirmPassword"/>

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/confirmPassword"
                app:layout_constraintTop_toBottomOf="@id/etNewPassword"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/default_button"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>