<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:background="@android:color/transparent"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guide"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <ImageView
        android:id="@+id/img_avatar"
        app:layout_constraintStart_toStartOf="@id/left_guide"
        app:layout_constraintEnd_toEndOf="@id/right_guide"
        app:layout_constraintTop_toBottomOf="@id/top_guide"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/avatar"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@id/img_avatar"
        app:layout_constraintEnd_toEndOf="@id/img_avatar"
        app:layout_constraintTop_toBottomOf="@id/img_avatar"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="TODO"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guide"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guide"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/img_lock"
        app:layout_constraintStart_toStartOf="@id/left_guide"
        app:layout_constraintEnd_toEndOf="@id/right_guide"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_lock_24"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/tv_profile_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_profile_password"
        app:layout_constraintEnd_toEndOf="@id/right_guide"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/left_guide"
        app:layout_constraintTop_toBottomOf="@id/img_lock"  />

    <EditText
        android:id="@+id/edtxt_profile_pass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:minHeight="48dp"
        android:inputType="textPassword"
        android:hint="@string/profile_password"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:focusedByDefault="true"
        app:layout_constraintEnd_toEndOf="@id/right_guide"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/left_guide"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_password"  />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:minHeight="0dp"
        android:background="@drawable/default_button"
        android:text="@string/btn_ok"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/right_guide"
        app:layout_constraintStart_toStartOf="@id/left_guide"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_profile_pass" />
</androidx.constraintlayout.widget.ConstraintLayout>